2002-05-24 18:07 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el: Added joint copyright.

2002-05-24 15:34 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-end-of-defun): Renamed `defunp' to `is-defun-p'
	so as to work around a bug in emacs' Common Lisp indentation
	engine (no, this doesn't have aanything to do with `xbase-mode',
	but it stops xbase.el being badly formatted). See
	<URL:http://mail.gnu.org/pipermail/bug-gnu-emacs/2002-May/012763.html>
	my report to the emacs developers.
	
2002-05-24 10:45 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-end-of-defun): Improved the doc-string.

2002-05-24 10:39 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-find-statement-backward): Removed `then' part of
	loop. Not required.
	(xbase-find-some-statement-backward): As above.

2002-05-24 09:46 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-find-matching-statement): Simplified the test of
	the `while'.

2002-05-24 09:41 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-font-lock-logic): Added.
	(xbase-logic-face): Added.
	(xbase-mode): Added logic operators to the font lock defaults.

2002-05-24 09:33 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-end-of-defun): Don't `loop' when `while' will
	do.

2002-05-23 10:32 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-end-of-defun): Added.
	(xbase-mode): Added `end-of-defun-function' as a local variable.
	Set it to the above. This means that `end-of-defun' will work in
	xbase buffers.

2002-05-23 10:16 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Added `defun-prompt-regexp' as a local
	variable. Set it to (xbase-rule-regexp 'xbase-defun). This means
	that `beginning-of-defun' will work in xbase buffers.

2002-05-23 10:08 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-describe-line): Added.
	(xbase-mode-map): Bound the above to "C-c C-l".
