@@ -464,15 +464,15 @@ Note: WHOLE-EXP is currently ignored."
 
 This function is used by `xbase-mode' as the value for
 `end-of-defun-function'. This makes \\[end-of-defun] work in Xbase buffers."
-  (flet ((is-defun-p ()
+  (flet ((defunp ()
            (eq (xbase-rule-name (xbase-current-line-match)) 'xbase-defun)))
-    (when (is-defun-p)                  ; If we're on the start of a function.
+    (when (defunp)                      ; If we're on the start of a function.
       (forward-line 1))                 ; skip forward a line.
     ;; Look for the start of another function or the end of the buffer.
-    (while (not (or (eobp) (is-defun-p)))
+    (while (not (or (eobp) (defunp)))
       (forward-line 1))
     ;; If we're on a defun, back up one line.
-    (when (is-defun-p)
+    (when (defunp)
       (forward-line -1))))
                    
 ;;;###autoload
